--- a/Views/ShoppingCart/Index.cshtml
+++ b/Views/ShoppingCart/Index.cshtml
@@ -35,3 +35,7 @@
 </table>
 
 
+<div class="text-center">
+    <a class="btn btn-primary" asp-controller="Order" asp-action="Checkout">Check out now!</a>
+</div>
+
